04_TAD_simples/TAD_01/Resultados/MateusBiancardi/jogada/result_compilation.txt
jogada.c: In function ‘LeJogada’:
jogada.c:14:41: error: expected ‘;’ before ‘if’
   14 |   printf("Digite uma posicao (x e y): ") if (scanf("%d %d", &x, &y) == 2)
      |                                         ^~~
      |                                         ;
jogada.c:13:10: warning: unused variable ‘y’ [-Wunused-variable]
   13 |   int x, y;
      |          ^
jogada.c:13:7: warning: unused variable ‘x’ [-Wunused-variable]
   13 |   int x, y;
      |       ^
jogada.c:11:11: warning: variable ‘j’ set but not used [-Wunused-but-set-variable]
   11 |   tJogada j;
      |           ^
jogada.c:21:1: warning: control reaches end of non-void function [-Wreturn-type]
   21 | };
      | ^
